--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
     <div style="float:left; margin-top:10px; margin-right:10px;">
     <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
-      <img src="/assets/rssicon.svg" width="40">
+      <img src="/assets/Books-3.png" width="40">
     </a>
     </div>
 
@@ -26,6 +26,11 @@
         {% for page in site.pages %}
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
+
+        <li><a href="{{ "/blog" | prepend: site.baseurl }}">Blog</a></li>
+
+         <li><a href="{{ "/research" | prepend: site.baseurl }}">Research</a></li>
+        
       </div>
     </nav>
   </div>
